--- a/src/app/components/tv-shows/tv-shows.component.html
+++ b/src/app/components/tv-shows/tv-shows.component.html
@@ -20,20 +20,20 @@
         </div>
     </form>
 
-    <ng-container *ngIf="searchRes">
+    <!-- <ng-container *ngIf="searchRes">
         <app-skeleton *ngIf="loader"></app-skeleton>
         <div class="row" *ngIf="!loader">
             <div class="col-md-2 listing__items" *ngFor="let item of searchRes | slice:0:18">
-                <div [routerLink]="['/tv/', item.id]">
+                <div [routerLink]="['/tv/', item?.id]">
                     <div class="listing-item-style">
                         <div class="overlay">
                             <div class="hover"><i class="material-icons">play_arrow</i> PLAY NOW</div>
                         </div>
                         <img *ngIf="item?.poster_path"
                             src="https://image.tmdb.org/t/p/w370_and_h556_bestv2/{{item?.poster_path}}"
-                            [alt]="item.title ? item.title : item.name">
+                            [alt]="item?.title ? item.title : item.name">
                         <img *ngIf="!item?.poster_path" src="assets/images/default-movie.png"
-                            [alt]="item.title ? item.title : item.name">
+                            [alt]="item?.title ? item.title : item.name">
                         <h6>{{ item?.name }}</h6>
                         <p class="rate"><i class="material-icons">star</i><span>{{item?.vote_average}}</span> /10</p>
                         <p class="year"><span>{{item?.first_air_date | date: 'yyyy'}}</span>
@@ -42,10 +42,10 @@
                 </div>
             </div>
         </div>
-    </ng-container>
+    </ng-container> -->
 
     <app-skeleton *ngIf="loader"></app-skeleton>
-    <div class="row" *ngIf="!loader">
+    <!-- <div class="row" *ngIf="!loader">
         <div class="col-md-2 listing__items" *ngFor="let item of topRatedTv | slice:0:18">
             <div [routerLink]="['/tv/', item.id]">
                 <div class="listing-item-style">
@@ -64,7 +64,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <mat-paginator [length]="totalResults" [pageSize]="20" (page)="changePage($event)"></mat-paginator>
 
