angular ,aterial design and imports

--- a/src/app/components/movie-details/movie-details.component.html
+++ b/src/app/components/movie-details/movie-details.component.html
@@ -170,7 +170,7 @@
                             <h2 class="title">Backdrops</h2>
                         </div>
                         <div class="items">
-                            <div class="item backdrop_" *ngFor="let backdrop of backdrops | slice: 1:17">
+                            <div class="item backdrop_" *ngFor="let backdrop of backdrops ">
                                 <div class="image">
                                     <img class="lazyload" src="https://image.tmdb.org/t/p/w533_and_h300_bestv2/{{ backdrop?.file_path }}">
                                 </div>
