--- a/src/app/components/tv-show-details/tv-show-details.component.html
+++ b/src/app/components/tv-show-details/tv-show-details.component.html
@@ -166,7 +166,7 @@
                             <h2 class="title">Backdrops</h2>
                         </div>
                         <div class="items">
-                            <div class="item backdrop_" *ngFor="let item of backdrop | slice: 1:10">
+                            <div class="item backdrop_" *ngFor="let item of backdrop ">
                                 <div class="image">
                                     <img class="lazyload"
                                         src="https://image.tmdb.org/t/p/w533_and_h300_bestv2/{{ item?.file_path }}">
