--- a/src/app/components/includes/header/header.component.html
+++ b/src/app/components/includes/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" [routerLink]="['/']">FlixMovies</a>
+    <a class="navbar-brand" [routerLink]="['/']">SparkyMovies</a>
     <ul class="navbar-nav ml-auto listMenu">
         <li class="nav-item active">
             <a class="nav-link" [routerLink]="['/']" routerLinkActive="router-link-active">Home
